<resources>

    <string name="app_name">travelB</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_addtrip">Add New Trip</string>
    <string name="button_temp">Temporary Button to lists</string>
    <string name="button_inserttrip">Add this Trip</string>
    <string name="button_updatetrip">Update this Trip</string>
    <string name="button_cancel">Cancel entry</string>
    <string name="button_delete">Delete this Trip</string>
    <string name="button_chosedate">Select departure date</string>
    <string name="button_chosedate2">Select return date</string>
    <string name="button_chosetime">Select time</string>
    <string name="button_chosetime2">Select return date</string>
    <string name="button_convert">Convert</string>
    <string name="button_todo">Add item</string>
    <string name="text_leaving_from">Leaving from</string>
    <string name="text_outgoing">Outgoing details</string>
    <string name="text_incoming">Return details</string>
    <string name="text_going_to">Going to</string>
    <string name="connection_yes">Yes</string>
    <string name="connection_no">No</string>
    <string name="text_connections">Do you have more than one connection?</string>
    <string name="text_comments">Extra stuff that you need to know</string>
    <string name="text_notification">Do you want to recieve notifications?</string>
    <string name="countdownto"></string>
    <string name="destination_name">Japan</string>
    <string name="weather">Weather is: </string>
    <string name="temp">Temperature is: </string>
    <string name="text_back">Back</string>
    <string name="text_go">View trip details</string>
    <string name="text_listintro">My travelB Trips</string>
    <string name="text_ten_day">10 Day Weather</string>
    <string name="text_currencytitle">Currency Converter</string>
    <string name="text_currencyenter">Enter the amount to convert:</string>
    <string name="text_todo">To do list</string>
    <string name="text_countdown">Enjoy your Trip!</string>
    
    <string name="alarm_notice">Your flight departs in 4 hours, it\'s time to go to the airport!</string>
    <string name="alarm_notice_title">FLIGHT COMING</string>
    
    <string name="tip1_title">Bags</string>
    <string name="tip1">Have you started to pack your bags?</string>
    
    <string name="tip2_title">Tip: Connections</string>
    <string name="tip2">Tip: Check if the airport that you are going to stop for the connection asks for a visa. Some airports require a transit visa!</string>
    
    <string name="tip3_title">Check-in</string>
    <string name="tip3">Have you checked in? If you have companions, don\'t forget to tell them to do the same. Maybe you could choose seats together.</string>
    
    <string name="tip4_title">Checked baggage</string>
    <string name="tip4">Bag packed already? If not, we have some suggestions: Take clothes that you can easily match, (colors and styles) and shoes that you are going to use with any clothes that you take. Doing that, you avoid taking unnecessary items and you will have a lighter bag. (and maybe some extra space for shopping). Don\'t take anything fragile on the checked bag and put a luggage tag, especially if your bag is black!</string>
    
    <string name="tip5_title">Hand Luggage</string>
    <string name="tip5">Don\'t forget to pack your hand luggage. Include in it the \"survival kit\" (just in case your checked bag gets lost, if you have one): deodorant, toothbrush, toothpaste, comb/brush  and a change of clothes...Don\'t forget that for hand luggage you are only allowed 100 ml of liquid per container, and have a look at the size and weight of the bag that you are allowed to take. Camera, phone charger, and documents: passport, boarding pass and vaccination card (if you need one), and money of course! Also check if you need to change money - Use the currency converter to check!.</string>
    
    <string name="tip6_title">Tip: Accomodation</string>
    <string name="tip6">Have you sorted out your accomodation? Hostels are usually very cheap, and if you are travelling with companions that could be great fun, besides being nicer and safer to stay in the same room as someone that you know, sometimes hostels may require more luggage because you have to bring your towel, shampoo, soap, hair dryer, etc...</string>

</resources>